--- a/tex/2017/3/5-diag.tex
+++ b/tex/2017/3/5-diag.tex
@@ -1,6 +1,6 @@
 \begin{tikzpicture}
-    \draw[->] (-5.2, 0) -- (5.2, 0) node[right] {\(x\)};
-    \draw[->] (0, -5.2) -- (0, 9.2) node[above] {\(y\)};
+    \draw[->] (-5.2, 0) -- (5.2, 0) node at (5.2, 0) [right] {\(x\)};
+    \draw[->] (0, -5.2) -- (0, 9.2) node at (0, 9.2) [above] {\(y\)};
 
     \draw[color=black, domain=-pi:pi, smooth] plot ({deg(\x)}:{1 + sin(deg(\x))}) node at (0, 2) [above right] {\(r = 1 + \sin \theta\)};
 
