--- a/sty/eason.sty
+++ b/sty/eason.sty
@@ -1,7 +1,7 @@
 % Packages
 \usepackage{graphicx}
 \usepackage{pgfplots}
-\pgfplotsset{compat=1.18}
+\pgfplotsset{compat=1.8}
 \usetikzlibrary{calc}
 % \usepackage[utf8]{inputenc}
 
@@ -57,6 +57,10 @@
 \DeclareMathOperator{\Normal}{N}
 \DeclareMathOperator{\Exponential}{Exp}
 \DeclareMathOperator{\Uniform}{U}
+
+% Complex Numbers
+\DeclareMathOperator{\im}{Im}
+\DeclareMathOperator{\re}{Re}
 
 % Missing Trigonometric & Hyperbolic functions
 \DeclareMathOperator{\cosec}{cosec}
