--- a/tex/2015/3/4.tex
+++ b/tex/2015/3/4.tex
@@ -1,2 +1,91 @@
 \Question{\currfilebase}
-\WorkInProgress
+
+\begin{enumerate}
+    \item Let \(f(z) = z^3 + az^2 + bz + c\). If we restrict the domain to the reals, we have
+          \[
+              \lim_{x \to +\infty} f(x) = +\infty, \lim_{x \to -\infty} f(x) = -\infty.
+          \]
+
+          By the definition of a limit, this means that \(f(x) > 0\) for sufficiently big \(x\)s (say, for all \(x \geq A\)), and \(f(x) < 0\) for sufficiently small \(x\)s (say, for all \(x \leq B\)).
+
+          Since \(f\) is continuous on \([B, A] \subset \RR\), and \(f(B) < 0\), \(f(A) > 0\). This means that for some \(\xi \in (B, A) \subset \RR\) such that \(f(\xi) = 0\), which finishes our proof.
+
+    \item By Vieta's Theorem, we have
+          \begin{align*}
+              z_1 + z_2 + z_3             & = -a, \\
+              z_1 z_2 + z_1 z_3 + z_2 z_3 & = b,  \\
+              z_1 z_2 z_3                 & = -c.
+          \end{align*}
+
+          Therefore, we have \(S_1 = -a\) and \(a = -S_1\). Notice that
+          \begin{align*}
+              \frac{S_1^2 - S_2}{2} & = \frac{(z_1 + z_2 + z_3)^2 - (z_1^2 + z_2^2 + z_3^2)}{2} \\
+                                    & = \frac{2 \cdot (z_1 z_2 + z_1 z_3 + z_2 z_3)}{2}         \\
+                                    & = z_1 z_2 + z_1 z_3 + z_2 z_3                             \\
+                                    & = b.
+          \end{align*}
+
+          This means
+          \begin{align*}
+              a & = - S_1,                 \\
+              b & = \frac{S_1^2 - S_2}{2}.
+          \end{align*}
+
+          Also, notice that
+          \begin{align*}
+              -S_1^3 + 3 S_1 S_2 - 2 S_3 & = - (z_1 + z_2 + z_3)^3 + 3 (z_1 + z_2 + z_3) (z_1^2 + z_2^2 + z_3^2) - 2(z_1^3 + z_2^3 + z_3^3)                             \\
+                                         & = -(z_1^3 + z_2^3 + z_3^3 + 3z_1 z_2^2 + 3z_1 z_3^2 + 3 z_2 z_1^2 + 3 z_2 z_3^2 + 3 z_3 z_1^2 + 3 z_3 z_2^2 + 6 z_1 z_2 z_3) \\
+                                         & \phantom{=} + 3(z_1^3 + z_2^3 + z_3^3 + z_1 z_2^2 + z_1 z_3^2 + z_2 z_1^2 + z_2 z_3^2 + z_3 z_1^2 + z_3 z_2^2)               \\
+                                         & \phantom{=} - 2(z_1^3 + z_2^3 + z_3^3)                                                                                       \\
+                                         & = -6 z_1 z_2 z_3                                                                                                             \\
+                                         & = 6c,
+          \end{align*}
+          as desired.
+
+    \item Consider the complex numbers \(z_k = r_k \exp (i \theta_k)\) for \(k = 1, 2, 3\).
+
+          This means that \(z_k^n = r_k^n \exp (i n \theta_k)\) by De Moivre's theorem, hence
+          \[
+              \im z_k^n = r_k^n \sin (n \theta_k).
+          \]
+
+          This converts our condition to
+          \begin{align*}
+              \im \sum_{k = 1}^{3} z_k^n = 0
+          \end{align*}
+          for \(n = 1, 2, 3\).
+
+          Therefore, \(S_1, S_2, S_3\) are real, and therefore, so are \(a, b, c\).
+
+          Hence, by part (i), there must be some \(k\) such that \(z_k\) is real, which means \(\theta_k\) is some multiple of \(2\pi\).
+
+          Since \(\theta_k \in (-\pi, \pi)\), we must have \(\theta_k = 0\) for such.
+
+          If \(\theta_1 = 0\), \(z_1 \in \RR\). This therefore means that \(z_1^n \in \RR\), and hence
+          \[
+              \im \sum_{k = 2}^{3} z_k^n = 0
+          \]
+          for \(n = 1, 2, 3\).
+
+          Consider the polynomial \((z - z_2)(z - z_3) = 0\), and let the expansion be \(z^2 + pz + q = 0\).
+
+          By Vieta's Theorem, we have
+          \begin{align*}
+              z_2 + z_3 & = -p, \\
+              z_2 z_3   & = q.
+          \end{align*}
+
+          This therefore means that
+          \begin{align*}
+              p  & = - (z_2 + z_3),                   \\
+              2q & = (z_2 + z_3)^2 - (z_2^2 + z_3^2).
+          \end{align*}
+
+          If \(z_2 + z_3 \in \RR\) and \(z_2^2 + z_3^2 \in \RR\), then \(p, q \in \RR\), and \(z_2, z_3\) are solutions to a real quadratic (polynomial).
+
+          Hence, the first case is \(z_2, z_3\) are both real, which gives \(\theta_2 = \theta_3 = 0\) since \(r_k > 0\), and hence \(\theta_2 = -\theta_3\).
+
+          The other case where \(z_2, z_3\) are complex congruent to each other gives \(\theta_2 = - \theta_3 + 2k\pi\) where \(k \in \ZZ\) due to \(r_k > 0\). But since \(\theta_2, \theta_3 \in (-\pi, \pi)\), it must be the case that \(\theta_2 = -\theta_3\), since the width of the interval is exactly \(2\pi\), and it is an open interval.
+
+          This finishes our proof.
+\end{enumerate}
