--- a/tex/2015/3/4.tex
+++ b/tex/2015/3/4.tex
@@ -44,7 +44,7 @@
 
     \item Consider the complex numbers \(z_k = r_k \exp (i \theta_k)\) for \(k = 1, 2, 3\).
 
-          This means that \(z_k^n = r_k^n \exp (i n \theta_k)\) by De Moivre's theorem, hence
+          This means that \(z_k^n = r_k^n \exp (i n \theta_k)\) by de Moivre's theorem, hence
           \[
               \im z_k^n = r_k^n \sin (n \theta_k).
           \]
