--- a/sty/eason.sty
+++ b/sty/eason.sty
@@ -10,6 +10,7 @@
 
 \usepackage{amsfonts}
 \usepackage{amsmath}
+\usepackage{amssymb}
 
 \usepackage[dvipsnames]{xcolor}
 \usepackage{fontawesome5}
@@ -85,7 +86,10 @@
 \DeclareMathOperator{\arcosech}{arcosech}
 
 % Other Math Symbols
+\DeclareMathOperator{\modulo}{mod}
+
 \newcommand{\divides}{\mid}
+\newcommand{\notdivides}{\nmid}
 \newcommand{\abs}[1]{\left\lvert#1\right\rvert}
 \newcommand{\LHS}{\text{LHS}}
 \newcommand{\RHS}{\text{RHS}}
